# lukuvinkkikirjasto

./: .coverage  .coveragerc  .env  .gitignore  .pylintrc  README.md  app.py  pyproject.toml  report.html  requirements.txt  run_robot_tests.sh  schema.sql  tasks.py
.github/workflows/: main.yml
dokumentaatio/: Loppuraportti.md  definiton_of_done.md
src/: AppLibrary.py  app.py  config.py  database.py  initialize_database.py
src/entities/: book_tip.py  kirjavinkki.py
src/repositories/: kayttaja_repositorio.py  kayttajat.py  tip_repository.py  user_repository.py  vinkit.py  vinkki_repositorio.py
src/services/: book_tip_service.py  kayttaja_service.py  kirjavinkki_service.py  user_service.py
src/static/: style.css
src/templates/: kirjautuminen.html  layout.html  login.html  lukuvinkit.html  new_tip.html  register.html  rekisteroityminen.html  tips.html  uusi_vinkki.html  virhe.html
src/tests/: home.robot  kayttaja_repo_test.py  kayttaja_repository_test.py  lisaa_kirjavinkki.robot  resource.robot  service_test.py  vinkit_test.py
src/tests/robot/: AppLibrary.py  add_book_tip.robot  kayttaja.robot  lisaa_kirjavinkki.robot  resource.robot  tips.robot  user.robot  vinkit.robot
src/tests/unittests/: book_tip_service_test.py  kayttaja_service_test.py  kirjavinkki_service_test.py  service_test.py  tip_repository_test.py  user_repository_test.py  user_service_test.py  vinkki_repository_test.py
src/views/: kirjautuminen.py  like.py  login.py  lukuvinkit.py  new_tip.py  register.py  rekisteroityminen.py  tests.py  tips.py  uusi_vinkki.py
